--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,19 @@
     <groupId>org.vaadin.se.addons</groupId>
     <artifactId>flip-root</artifactId>
     <packaging>pom</packaging>
-    <version>1.0.4</version>
+    <version>2.0.0-SNAPSHOT</version>
     <name>Flip - Root Project</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <vaadin.version>7.6.2</vaadin.version>
+        <vaadin.version>8.0.6</vaadin.version>
         <vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
     </properties>
+
+    <prerequisites>
+        <maven>3</maven>
+    </prerequisites>
+
 
     <organization>
         <name>Sami Ekblad</name>
